refactor UrlMappingService logic and remove duplication